# Synthetic-Data-Generator

./: pyproject.toml
databases/: docker-compose-postgres.yml
