[tool.poetry]
name = "synthetic-data-generator"
version = "0.1.0"
description = ""
authors = ["Ivan Panfilov <i.a.panfilov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
Faker = "^13.15.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
